--- a/project.json
+++ b/project.json
@@ -5,6 +5,7 @@
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.23.5]",
+    "UiPath.GSuite.Activities": "[2.6.24]",
     "UiPath.Mail.Activities": "[1.23.11]",
     "UiPath.System.Activities": "[24.10.4]",
     "UiPath.Testing.Activities": "[24.10.1]",
